<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">


        <TextView
            android:id="@+id/txMessage"
            android:layout_width="match_parent"
            android:layout_height="27sp"
            android:text="@string/message_dialog_factor"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvEquality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/equalFactor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="60"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edtFactor"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="60"
                android:ems="10"
                android:inputType="numberDecimal"
                tools:ignore="NestedWeights"
                android:autofillHints="" />

            <Spinner
                android:id="@+id/spMoney"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="40" />

        </LinearLayout>

        <Button
            android:id="@+id/btnDeleteCoin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/red"
            android:text="@string/delete"
            android:textColor="@color/white"
            app:icon="@drawable/ic_delete_forever_24"
            app:iconTint="@color/white" />

    </LinearLayout>

</FrameLayout>